testdata/k8s/stoacloud/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: shaple-builder-config
  namespace: dev
  labels:
    app: shaple-builder
data:
  kube_config.yaml: |
    apiVersion: v1
    clusters:
      - cluster:
          certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURpVENDQW5HZ0F3SUJBZ0lSQU1lVTVVRFAramFSNnBpOFVmOUNzU1V3RFFZSktvWklodmNOQVFFTEJRQXcKWGpFUE1BMEdBMVVFQXd3R1N6aHpJRU5CTVFzd0NRWURWUVFHRXdKVlV6RVBNQTBHQTFVRUJ3d0dRWFZ6ZEdsdQpNUTh3RFFZRFZRUUtEQVpQY21GamJHVXhEREFLQmdOVkJBc01BMDlqYVRFT01Bd0dBMVVFQ0F3RlZHVjRZWE13CkhoY05Nak13T0RBNU1EY3dNakEwV2hjTk1qZ3dPREE1TURjd01qQTBXakJlTVE4d0RRWURWUVFEREFaTE9ITWcKUTBFeEN6QUpCZ05WQkFZVEFsVlRNUTh3RFFZRFZRUUhEQVpCZFhOMGFXNHhEekFOQmdOVkJBb01Caz [...]
          server: https://131.186.21.252:6443
        name: shaple
    contexts:
      - context:
          cluster: shaple
          user: shaple
          namespace: dev
        name: shaple
    current-context: shaple
    kind: Config
    preferences: {}
    users:
      - name: shaple
        user:
          exec:
            apiVersion: client.authentication.k8s.io/v1beta1
            args:
              - ce
              - cluster
              - generate-token
              - --cluster-id
              - ocid1.cluster.oc1.ap-seoul-1.aaaaaaaaejiwgvyuczugemxpnnbcis7qun6quet4hq7bquapbc4j3iqptxla
              - --region
              - ap-seoul-1
            command: oci
            env: []
            interactiveMode: Never
            provideClusterInfo: false
  oci_config: |
    [DEFAULT]
    user=ocid1.user.oc1..aaaaaaaa4dhbsek4bwhcevg43h2l4gbbs2znqih432ttxcx3sci2yny5ivua
    fingerprint=f7:b6:ab:1b:77:c6:9b:08:1a:f2:56:76:2b:ae:d2:af
    key_file=/shaple/.oci/oci_api_key.pem
    tenancy=ocid1.tenancy.oc1..aaaaaaaaox5ri2mpyzddiqblgwunxlexegpvcihvfywrskbpebxthiwoeqdq
    region=ap-seoul-1
