testdata/k8s/stoacloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: shaple-builder
  namespace: dev
spec:
  rules:
    - host: builder.local.shaple.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: shaple-builder
                port:
                  number: 8080
