testdata/k8s/stoacloud/secret.yaml
# This file is auto-generated by create-secret.sh
apiVersion: v1
kind: Secret
metadata:
  name: shaple-builder
  namespace: default
  labels:
    app: shaple-builder
type: Opaque
data:
  oci_api_key.pem: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQ3Z6cW1XWUUrWEhGV2YKQlpBK3VzbjNsa3doSUVOTHZTalJRSVdiU1BQZ3R0VHNjQXJRaTVJbjRKQkltcTI0YjlTUGg1Wi9XdGtUZDlrZgp0M2h5SmkvY1crTllGNnhjNkJzREg3cndscFFGaTltazM0aUYvVEJxTHRITWpvdEhYVmNHRVpIcnZheGxxS25LCktlQXgyQldQSVc1UE1aVENKMFo5WG82RDVTdUVTMUtiVW9CWWt3NFhFblZycHlXSVUwVHVHdDBucUtWUDA5eVUKZU5VRm5jVWVSaEZyYUgyU1FCNUp6S1pNNGZxQ0l1MnJCemtzR2NTc1FtT0xVZnlwRnlvNTVuUitnTVdrUi9xeApsTjRqcUxGY [...]
  s3_access_key: YzIxMjljOGZkY2M3Y2I5ZDhjYTg3OWIzODVlMmZhNTc5ZjlmZjk4Yw==
  s3_secret_key: cUZyMjBDK08yOStrc3BFYk9tYUp2NUZPcW8rLy92YytKVWVzZTRHekNOND0=
