testdata/k8s/stoacloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shaple-builder
  namespace: default
  labels:
    app: shaple-builder
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: web
  selector:
    app: shaple-builder
